# ai-experiments

./: .gitignore  AGENTS.md  EXPERIMENT_PYTHON.md  README.md  pyproject.toml  start-stonesoup
2026-03-23-Embedding/: demo.py  download_alice_cache.py  embedding_least_norm_tokens.py  embedding_norm_distributions.py  embedding_qwen35_statistics.py
2026-03-23-Embedding/reports/: least_norm_tokens.txt
experiments/: README.md
experiments/2026-03-23-Embedding/: demo.py  download_alice_cache.py  embedding_least_norm_tokens.py  embedding_norm_distributions.py  embedding_qwen35_statistics.py
experiments/2026-03-24-Explain-Embedding/: explain_concept_embeddings.py  interpolate_two_vectors.py  mean_cosine_distribution_cached_models.py
experiments/2026-03-25-Classic-Word2Vec/: google-word2vec.py
experiments/2026-03-25-Reversal-Curse/: models-answers.py
experiments/2026-03-25-Reversal-Curse/reports/: 2026-03-25-multi-model-reversal-curse-sweep.md
experiments/2026-03-25-VLM/: explore-qwen-vlm.py
experiments/2026-03-25-VLM/output/: patch_cosine_explorer-small.html
experiments/2026-03-28-Qwen3-VL-MMStar/: eval_qwen3vl_mmstar.py  info-flow-image-to-non-image.py  qwen3vl_attention_vis.py  qwen3vl_mmstar.py
experiments/2026-03-28-Qwen3-VL-MMStar/output/: mmstar_eval_report.html  mmstar_results.jsonl
experiments/Demo/: demo.py
stonesoup/: README.md  __init__.py
stonesoup/backend/: __init__.py  kernel.py  server.py  watcher.py
stonesoup/frontend/: index.html  package-lock.json  package.json  vite.config.ts
stonesoup/frontend/src/: main.ts  style.css
