[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ai-experiments"
version = "0.0.0"
description = "Personal experiments (Stonesoup cell runner, demos)"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
stonesoup = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "watchdog>=4.0",
    "matplotlib>=3.8",
]
# UMAP plots in e.g. ``experiments/2026-03-24-Explain-Embedding/``.
embedding = [
    "umap-learn>=0.5.6",
]

[tool.hatch.build.targets.wheel]
packages = ["stonesoup"]
